# shop_manager

./: README.md  license.txt  pyproject.toml  setup.py
shop_manager/: api-editor  api.py  hooks.py  modules.txt  shop_manager.py
shop_manager/pages/: api_editor.py
shop_manager/public/js/: desk.js
shop_manager/templates/pages/: api_editor.html
